hola estamos realizando cambios en el html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Este es un hola Mundo con Python y js</h1>
+    <h2>esta es una lectura de pagina html</h2>
 </body>
 </html>
